--- a/app/src/theme/_smui-theme.scss
+++ b/app/src/theme/_smui-theme.scss
@@ -1,27 +1,22 @@
-@use 'sass:color';
-
-@use '@material/theme/color-palette';
-
-// Svelte Colors!
-@use '@material/theme/index' as theme with (
-  $primary: #ff3e00,
-  $secondary: #676778,
-  $surface: #fff,
-  $background: #fff,
-  $error: color-palette.$red-900
-);
-
 @use './typography/Typography';
+@use './token.scss';
+
+:root {
+  --mdc-theme-primary: var(--md-sys-color-primary-light);
+  --mdc-theme-secondary: var(--md-sys-color-secondary-light);
+  --mdc-theme-background: var(--md-sys-color-background-light);
+  --mdc-theme-surface: var(--md-sys-color-surface-light);
+  --mdc-theme-on-primary: var(--md-sys-color-on-primary-light);
+  --mdc-theme-on-secondary: var(--md-sys-color-on-secondary-light);
+  --mdc-theme-on-surface: var(--md-sys-color-on-surface-light);
+  --mdc-theme-shadow: var(--md-sys-color-shadow-light);
+  --mdc-theme-tertiary-container-light: var(--md-sys-color-tertiary-container-light);
+  --mdc-theme-on-tertiary-container-light: var(--md-sys-color-on-tertiary-container-light);
+  --mdc-text-button-disabled-label-text-color: color-mix(in srgb, var(--mdc-theme-primary) 38%, var(--mdc-theme-on-primary));
+}
 
 html,
 body {
-  background-color: theme.$surface;
-  color: theme.$on-surface;
-}
-
-a {
-  color: #40b3ff;
-}
-a:visited {
-  color: color.scale(#40b3ff, $lightness: -35%);
+  background-color: var(--mdc-theme-background);
+  color: var(--mdc-theme-on-surface);
 }
