--- a/app/src/theme/_smui-theme.scss
+++ b/app/src/theme/_smui-theme.scss
@@ -10,9 +10,14 @@
   --mdc-theme-on-secondary: var(--md-sys-color-on-secondary-light);
   --mdc-theme-on-surface: var(--md-sys-color-on-surface-light);
   --mdc-theme-shadow: var(--md-sys-color-shadow-light);
-  --mdc-theme-tertiary-container-light: var(--md-sys-color-tertiary-container-light);
-  --mdc-theme-on-tertiary-container-light: var(--md-sys-color-on-tertiary-container-light);
   --mdc-text-button-disabled-label-text-color: color-mix(in srgb, var(--mdc-theme-primary) 38%, var(--mdc-theme-on-primary));
+  --md-theme-secondary-container: var(--md-sys-color-secondary-container-light);
+  --md-theme-on-secondary-container: var(--md-sys-color-on-secondary-container-light);
+  --md-theme-outline: var(--md-sys-color-outline-light);
+  --mdc-checkbox-unchecked-color: var(--mdc-theme-on-surface);
+  --md-theme-surface-variant: var(--md-sys-color-surface-variant-light);
+  --md-theme-on-surface-variant: var(--md-sys-color-on-surface-variant-light);
+  --mdc-theme-text-primary-on-background: var(--mdc-theme-on-primary):
 }
 
 html,
