--- a/app/src/theme/dark/_smui-theme.scss
+++ b/app/src/theme/dark/_smui-theme.scss
@@ -10,14 +10,14 @@
   --mdc-theme-on-secondary: var(--md-sys-color-on-secondary-dark);
   --mdc-theme-on-surface: var(--md-sys-color-on-surface-dark);
   --mdc-theme-shadow: var(--md-sys-color-shadow-dark);
-  --mdc-theme-tertiary-container-light: var(--md-sys-color-tertiary-container-dark);
-  --mdc-theme-on-tertiary-container-light: var(--md-sys-color-on-tertiary-container-dark);
   --mdc-text-button-disabled-label-text-color: color-mix(in srgb, var(--mdc-theme-primary) 38%, var(--mdc-theme-on-primary));
-
-  --gmpx-color-surface: #242f3e;
-  --gmpx-color-on-surface: #746855;
-  --gmpx-color-on-primary: #242f3e;
-  --gmpx-color-on-surface-variant: #d59563;
+  --md-theme-secondary-container: var(--md-sys-color-secondary-container-dark);
+  --md-theme-on-secondary-container: var(--md-sys-color-on-secondary-container-dark);
+  --md-theme-outline: var(--md-sys-color-outline-dark);
+  --mdc-checkbox-unchecked-color: var(--mdc-theme-on-surface);
+  --md-theme-surface-variant: var(--md-sys-color-surface-variant-dark);
+  --md-theme-on-surface-variant: var(--md-sys-color-on-surface-variant-dark);
+  --mdc-theme-text-primary-on-background: var(--mdc-theme-on-primary):
 }
 
 html,
